# pairhmm_posit_cpp

./: .gitignore  .travis.yml  Brewfile  CMakeLists.txt  README.md  inputreader.hpp  main.cpp  pairhmm_float.hpp  pairhmm_posit.hpp
pairhmm_compare/: CMakeLists.txt  run_benchmark.sh
pairhmm_compare/src/: defines.hpp  pairhmm.cpp  pairhmm_posit.hpp  utils.cpp  utils.hpp
phred/: CMakeLists.txt  main.cpp
results/phred_compare/: phred_compare_cpp.m  phred_float_posit.txt
results/precision_compare/: 1_data_2-1.fig  1_data_2-100.fig  1_data_2-20.fig  1_data_2-50.fig  32_data_2-1.fig  32_data_2-10.fig  32_data_2-100.fig  32_data_2-20.fig  32_data_2-5.fig  32_data_allpoints.fig  initial_constant_compare.m  pairhmm_values_1_data_2-10.txt  pairhmm_values_1_data_2-100.txt  pairhmm_values_1_data_2-20.txt  pairhmm_values_1_data_2-5.txt  pairhmm_values_1_data_2-50.txt  pairhmm_values_32_data_2-1.txt  pairhmm_values_32_data_2-10.txt  pairhmm_values_32_data_2-100.txt  pairhmm_values_32_data_2-20.txt  pairhmm_values_32_data_2-5.txt  pairhmm_values_verysmall.txt  precision_compare.m  verysmall_allpoints.fig
results/precision_compare/45b5e21_fused_element_float_posit32-3/: 32_data_posit_32-3_const_1.txt  32_data_posit_32-3_const_10.txt  32_data_posit_32-3_const_100.txt  32_data_posit_32-3_const_2.txt  32_data_posit_32-3_const_20.txt  32_data_posit_32-3_const_5.txt  32_data_posit_32-3_const_50.txt
results/precision_compare/45b5e21_fused_element_float_posit32-4/: 1.txt  10.txt  100.txt  2.txt  20.txt  5.txt  50.txt
results/precision_compare/45b5e21_fused_element_float_posit32-5/: 1.txt  10.txt  100.txt  2.txt  20.txt  5.txt  50.txt
results/precision_compare/5cba05c_nofused_float_posit32-2/: 1.txt  10.txt  100.txt  15.txt  2.txt  20.txt  25.txt  30.txt  35.txt  40.txt  45.txt  5.txt  50.txt  55.txt  60.txt  65.txt  70.txt  75.txt  80.txt  85.txt  90.txt  95.txt
results/precision_compare/8a7ff33_fused_element_float_posit32-2/: 10.txt  25.txt  30.txt  35.txt  5.txt  60.txt  70.txt  85.txt
results/precision_compare/d192d35_fused_element_new_approach_float_posit32-2/: 100.txt  1_data_const_1.txt  1_data_const_10.txt  1_data_const_2.txt  1_data_const_20.txt  1_data_const_5.txt  32_data_const_1.txt  32_data_const_2.txt  32_data_const_20.txt  50.txt
results/precision_compare/d195ce7_fused_float_posit32-2/: 100.txt  15.txt  40.txt  45.txt  50.txt  55.txt  65.txt  75.txt  80.txt  90.txt  95.txt
results/precision_compare/d195ce7_fused_float_posit32-3/: 15.txt  25.txt  30.txt  35.txt  40.txt  45.txt  55.txt  60.txt  65.txt  70.txt  75.txt  80.txt  85.txt  90.txt  95.txt
src/: config.hpp  debug_values.hpp  inputreader.hpp  main.cpp  pairhmm_float.hpp  pairhmm_posit.hpp  utils.hpp
src/benchmarks/: phred_to_posit.cpp
src/pairhmm/: config.hpp  debug_values.hpp  inputreader.hpp  main.cpp  pairhmm.hpp  pairhmm_decimal.hpp  pairhmm_float.hpp  pairhmm_ld.hpp  pairhmm_posit.hpp  testcase.hpp  utils.hpp
src/pairhmm/draft/: pairhmm_float.hpp  pairhmm_ld.hpp
src/tools/: phred_to_posit.cpp  phred_to_posit.hpp
testdata/: 1_data.txt  verysmall.txt
